@@ -25,6 +25,12 @@
 <a href="s6-ipcserver-socketbinder.html">s6-ipcserver-socketbinder</a>. </li>
  <li> <tt>-d&nbsp;<em>notif</em></tt> option added to
 <a href="s6-svscan.html">s6-svscan</a>. </li>
+ <li> New optional <tt>./down-signal</tt> file in a
+<a href="servicedir.html">service directory</a>, to tell
+<a href="s6-supervise.html">s6-supervise</a> to use another signal than
+SIGTERM when bringing the service down. </li>
+ <li> New <tt>-r</tt> option added to <a href="s6-svc.html">s6-svc</a>, to
+restart the service via the signal defined in <tt>./down-signal</tt>. </li>
 </ul>
 
 <h2> in 2.7.1.1 </h2>
