@@ -8,6 +8,10 @@ In 2.7.2.0
 *shallow readiness*, i.e. readiness will be reported when s6-svscan is ready
 to receive s6-svscanctl commands; it does *not* mean all the services started
 at s6-svscan launch will be ready.
+ - New optional file in a service directory: down-signal. It allows you to
+customize the signal sent by s6-svc -d (and now s6-svc -r too).
+ - New s6-svc option: -r. Sends the signal defined in the down-signal file
+(still SIGTERM by default).
 
 
 In 2.7.1.1
